# sparkle

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: market.py  news.py  stock.py
app/core/: config.py  websocket.py
app/ws/routes/: trades.py
